# pharos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  Cargo.nix  Cargo.toml  Dockerfile  FORMAT.md  SPEC.md  Tiltfile  config.example.toml  ctlptl-cluster.yaml  deny.toml  flake.nix  justfile
crates/pharos-cache/: Cargo.toml
crates/pharos-cache/src/: hls_cache.rs  image_cache.rs  lib.rs  single_flight.rs  subtitle_cache.rs  trickplay_cache.rs
crates/pharos-core/: Cargo.toml
crates/pharos-core/src/: auth.rs  lib.rs  secret.rs  tests.rs  time.rs
crates/pharos-discovery/: Cargo.toml
crates/pharos-discovery/src/: dlna_xml.rs  lib.rs  live_tv.rs
crates/pharos-jellyfin-api/: Cargo.toml
crates/pharos-jellyfin-api/src/: device_profile.rs  dto.rs  lib.rs  socket_messages.rs
crates/pharos-jellyfin-api/tests/: negotiator_proptest.rs  socket_msg_fuzz.rs
crates/pharos-jellyfin-test-client/: Cargo.toml
crates/pharos-jellyfin-test-client/src/: lib.rs
crates/pharos-scanner/: Cargo.toml
crates/pharos-scanner/benches/: hash.rs  parse.rs
crates/pharos-scanner/src/: detect.rs  ffmpeg.rs  fingerprint.rs  fs.rs  lib.rs  libav_prober.rs  watcher.rs
crates/pharos-scanner/src/metadata/: embedded.rs  filename.rs  mod.rs  nfo.rs  sidecar.rs  tests.rs
crates/pharos-server/: Cargo.toml
crates/pharos-server/src/: auth.rs  bg_io.rs  cli.rs  config.rs  dlna.rs  health.rs  hls_cache.rs  image_cache.rs  lib.rs  library_watch.rs  live_tv.rs  main.rs  metadata_backfill.rs  middleware.rs  obs.rs  online_enrich.rs  parental.rs  person_image_backfill.rs  quick_connect.rs  router.rs  scan_tasks.rs  segment_backfill.rs  sessions.rs  ssdp.rs  state.rs  subtitle_cache.rs  sync_distributed.rs  sync_recovery.rs  sync_resolver.rs  tmdb.rs  transcode_sessions.rs  trickplay_backfill.rs  trickplay_cache.rs  tvdb.rs
crates/pharos-server/src/middleware/: mod.rs  path_case.rs  red_metrics.rs
crates/pharos-server/src/sync/: clock.rs  group.rs  messages.rs  mod.rs  registry.rs  ws.rs
crates/pharos-server/tests/: attachment_fonts.rs  auth_header_fuzz.rs  boot.rs  browser_codec_matrix.rs  client_compat.rs  concurrent_auth_audit.rs  cross_user_isolation.rs  direct_bool_filters_audit.rs  dlna.rs  edge_inputs.rs  ffmpeg_integration.rs  filters_audit.rs  genres_filter_audit.rs  group_conformance.rs  group_drift.rs  has_subtitles_audit.rs  include_types_case_audit.rs  items_query_golden.rs  jellyfin_add_library.rs  jellyfin_admin.rs  jellyfin_api.rs  jellyfin_collections_entity.rs  jellyfin_feature_inventory.rs  jellyfin_feature_library_options.rs  jellyfin_feature_metadata.rs  jellyfin_feature_user_policy.rs  jellyfin_fts_facets.rs  jellyfin_genres_entity.rs  jellyfin_hls_multivariant.rs  jellyfin_hls_session_lifecycle.rs  jellyfin_hls_softsubs.rs  jellyfin_items.rs  jellyfin_latest.rs  jellyfin_libraries_typed.rs  jellyfin_live_tv.rs  jellyfin_media_segments.rs  jellyfin_music_browse.rs  jellyfin_people_entity.rs  jellyfin_playbackinfo_kotlin_strict.rs  jellyfin_playbackinfo_native_directplay.rs  (+51 more)
crates/pharos-server/tests/common/: mod.rs
crates/pharos-server/tests/golden_items/: items__exclude_episode.json  items__filter_resumable.json  items__filter_unplayed.json  items__has_subtitles_false.json  items__has_subtitles_true.json  items__include_audio.json  items__is_4k_true.json  items__is_hd_true.json  items__is_played_bool.json  items__max_index_1.json  items__media_types_video.json  items__min_index_2.json  items__min_width.json  items__name_starts_with_b.json  items__page_1_2.json  items__page_over.json  items__parent_album_echo.json  items__parent_artist_echo.json  items__parent_collection_saga.json  items__parent_genre_action.json  items__parent_person_joe.json  items__parent_season_delta_s1.json  items__parent_series_delta.json  items__parent_unknown.json  items__parent_zero.json  items__search_delta.json  items__sort_datecreated_asc.json  items__sort_name_desc.json  items__sort_random_seed.json  items__sort_random_seed_page.json  items__sort_runtime_asc.json  items__sort_runtime_desc.json  useritems__exclude_episode.json  useritems__filter_played.json  useritems__filter_resumable.json  useritems__filter_unplayed.json  useritems__genres_filter_action.json  useritems__has_subtitles_false.json  useritems__has_subtitles_true.json  useritems__ids_filter.json  (+31 more)
crates/pharos-store-sqlx/: Cargo.toml
crates/pharos-store-sqlx/migrations/postgres/: 0001_init.sql  0002_auth.sql  0003_system_identity.sql  0004_user_data.sql  0005_probe.sql  0007_subtitle_tracks.sql  0009_audio_tags.sql  (+30 more)
crates/pharos-store-sqlx/src/: any.rs  attachment_json.rs  audio_track_json.rs  auth_sqlite.rs  bg_lock.rs  chapter_json.rs  lib.rs  media_query.rs  migrate.rs  pg_sync_bus.rs  postgres.rs  preferences_sqlite.rs  provider_ids_json.rs  series_meta_row.rs  server_config.rs  sqlite.rs  string_list_json.rs  subtitle_track_json.rs  sync_group_sqlite.rs  transcode_session_sqlite.rs  user_data_sqlite.rs
crates/pharos-store-sqlx/tests/: auth_sqlite.rs  backend_conformance.rs  bg_leadership.rs  media_fts_facets.rs  media_query.rs  media_segments.rs  migrate_roundtrip.rs  probe_roundtrip.rs  sqlite_store.rs
crates/pharos-sync/: Cargo.toml
crates/pharos-sync/src/: bus.rs  bus_delivery.rs  clock.rs  delivery.rs  distributed.rs  group.rs  host.rs  hub.rs  lib.rs  messages.rs  persistence.rs  registry.rs  ws.rs
crates/pharos-sync/tests/: distributed_sync.rs  group_conformance.rs  group_drift.rs  hub_integration.rs
crates/pharos-transcode/: Cargo.toml
crates/pharos-transcode/src/: backend.rs  capability.rs  device.rs  hwaccel.rs  lib.rs  options.rs  probe.rs  protocol.rs  scheduler.rs  segment.rs  subwin.rs
crates/pharos-transcode/tests/: fingerprint_detect.rs  libav_frames.rs  libav_pool.rs  libav_probe.rs  mpegts_segment_timeline.rs  subtitle_burn_ass.rs  subtitle_windows_scan.rs  worker_ipc.rs
crates/pharos-ui/: Cargo.toml  Dioxus.toml  index.html
crates/pharos-ui/assets/: pharos.css
crates/pharos-ui/src/: api_types.rs  client.rs  lib.rs  views.rs
crates/pharos-ui/tests/: ssr_render.rs
(+200 files in other folders)
