[workspace]
resolver = "2"
members = [
    "crates/pharos-core",
    "crates/pharos-scanner",
    "crates/pharos-server",
    "crates/pharos-store-sqlx",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ali/pharos"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
actix-web = "4"
anyhow = "1"
argon2 = "0.5"
clap = { version = "4", features = ["derive", "env"] }
getrandom = "0.2"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "html_reports"] }
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "migrate"] }
thiserror = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
