[workspace]
resolver = "2"
members = [
    "crates/pharos-cache",
    "crates/pharos-core",
    "crates/pharos-discovery",
    "crates/pharos-jellyfin-api",
    "crates/pharos-jellyfin-test-client",
    "crates/pharos-scanner",
    "crates/pharos-server",
    "crates/pharos-store-sqlx",
    "crates/pharos-sync",
    "crates/pharos-transcode",
    "crates/pharos-ui",
    "workspace-hack",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ali/pharos"
# Internal crates — distribution is via the `pharos` binary, the
# OCI image, and the nix flake, not crates.io.
publish = false

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-web = "4"
actix-ws = "0.3"
anyhow = "1"
argon2 = "0.5"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
getrandom = "0.2"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "html_reports"] }
dioxus = { version = "0.7", default-features = false, features = ["macro", "html", "hooks", "signals"] }
dioxus-web = { version = "0.7", default-features = false }
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
quick-xml = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sonic-rs = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "migrate"] }
thiserror = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
toml = "0.8"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
# OTLP trace export (opt-in via [obs].otlp_endpoint → Tempo/any OTLP collector).
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

# Dev/test profile: drop full DWARF, keep line tables. Backtraces +
# assertion file:line still work; link step generates less. Note:
# changing this triggers a one-time full dep recompile (the cost has
# been paid; don't churn it). No measurable wall-time win on M-series
# darwin for the workspace as it stands today, but the smaller debug
# sections noticeably shrink target/ disk usage.

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
