[package]
name = "pharos-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pharos-core = { path = "../pharos-core" }
pharos-transcode = { path = "../pharos-transcode", default-features = false }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "sync", "io-util", "fs"] }
tracing.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
default = ["ffmpeg-lib"]
ffmpeg-spawn = ["pharos-transcode/backend-spawn"]
ffmpeg-lib = ["pharos-transcode/backend-lib"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "sync", "io-util", "fs", "time"] }

[lints]
workspace = true
