[package]
name = "pharos-jellyfin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pharos-cache = { path = "../pharos-cache", default-features = false }
pharos-core = { path = "../pharos-core" }
serde.workspace = true
serde_json = "1"
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
xxhash-rust.workspace = true

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints]
workspace = true
