[package]
name = "pharos-jellyfin-test-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Test-only HTTP client speaking the Jellyfin wire format the way a real
# device would. Not published — exists so pharos-server integration tests
# can drive end-to-end roundtrips against the server.

[dependencies]
reqwest.workspace = true
serde = { workspace = true }
serde_json = "1"
thiserror.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[lints]
workspace = true
