[package]
name = "pharos-scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
pharos-core = { path = "../pharos-core" }
# LIB-A5 — bounded-concurrency probe stream (`buffer_unordered`).
futures-util = "0.3"
# P48 — optional in-process libav prober. Routes the per-file scan probe
# through the persistent libav worker pool instead of forking ffprobe.
# Enabled via the `libav-probe` feature (the server turns it on).
pharos-transcode = { path = "../pharos-transcode", optional = true, default-features = false, features = ["backend-lib"] }
# LIB-A8 — filesystem watcher (optional). Pure-Rust cross-platform fs
# notification (inotify / kqueue / ReadDirectoryChangesW). Pulled in only
# behind the `watch` feature so the default build stays lean.
notify = { version = "8", optional = true }
# LIB-D2 — Kodi NFO XML reader (high-priority local MetadataProvider).
# Manual event-reader API (no serde feature): Kodi NFOs carry repeated
# `<genre>`/`<actor>`/`<uniqueid>` elements and tolerate extra/unknown
# tags, which the streaming event reader handles cleanly without a rigid
# derive.
quick-xml = { workspace = true }
# Episode-number extraction: a faithful port of Emby.Naming's ordered
# expression list (SxxEyy, 1x02, EP12, absolute anime numbering, …).
regex = "1"
serde = { workspace = true }
sonic-rs.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "process", "macros", "rt-multi-thread", "io-util"] }
tracing.workspace = true
walkdir.workspace = true
xxhash-rust.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

# LIB-A9 — `statfs(2)` the filesystem behind each media root to decide whether
# native watching is viable (network/fuse mounts can't deliver events → poll
# fallback). Linux-only syscall; the crate compiles everywhere (non-Linux
# returns `Unknown`). libc is already in the workspace graph.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
# Route probing through the in-process libav worker pool.
libav-probe = ["dep:pharos-transcode"]
# LIB-A8 — filesystem watcher (incremental update on create/modify/remove).
# Off by default; the server opts in (A9 wires it + the poll fallback).
watch = ["dep:notify", "tokio/sync", "tokio/time"]

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "hash"
harness = false

[lints]
workspace = true
