[package]
name = "pharos-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "pharos"
path = "src/main.rs"

[dependencies]
pharos-core = { path = "../pharos-core" }
pharos-scanner = { path = "../pharos-scanner" }
pharos-store-sqlx = { path = "../pharos-store-sqlx" }
pharos-transcode = { path = "../pharos-transcode" }
actix-cors.workspace = true
actix-files.workspace = true
actix-web.workspace = true
actix-ws.workspace = true
futures-util = "0.3"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
anyhow.workspace = true
argon2.workspace = true
clap.workspace = true
getrandom.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true
serde_json = "1"
socket2 = { version = "0.5", features = ["all"] }
sonic-rs.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
actix-test = "0.1"
awc = "3"
pharos-jellyfin-test-client = { path = "../pharos-jellyfin-test-client" }
proptest = "1"
regex-lite = "0.1"
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
