[package]
name = "pharos-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "pharos"
path = "src/main.rs"

[dependencies]
pharos-cache = { path = "../pharos-cache", default-features = false }
pharos-core = { path = "../pharos-core" }
pharos-discovery = { path = "../pharos-discovery" }
pharos-jellyfin-api = { path = "../pharos-jellyfin-api" }
pharos-scanner = { path = "../pharos-scanner" }
pharos-store-sqlx = { path = "../pharos-store-sqlx" }
pharos-sync = { path = "../pharos-sync" }
pharos-transcode = { path = "../pharos-transcode", default-features = false }
actix-cors.workspace = true
actix-files.workspace = true
actix-web.workspace = true
actix-ws.workspace = true
futures-util = "0.3"
httpdate = "1"
tempfile = "3"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
anyhow.workspace = true
argon2.workspace = true
clap.workspace = true
getrandom.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json = "1"
socket2 = { version = "0.5", features = ["all"] }
sonic-rs.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
xxhash-rust.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
# P48 — ffmpeg backend selection. Mutually exclusive — pick one. Default is
# the in-process libav backend (the hybrid: libav tiny-op worker pool +
# spawn for video-segment/live transcode). `--no-default-features --features
# ffmpeg-spawn` builds the pure-spawn backend.
default = ["ffmpeg-lib"]
ffmpeg-spawn = ["pharos-transcode/backend-spawn", "pharos-cache/ffmpeg-spawn"]
ffmpeg-lib = [
    "pharos-transcode/backend-lib",
    "pharos-cache/ffmpeg-lib",
    "pharos-scanner/libav-probe",
]
# LIB-A9 — enable native filesystem watching for the library (the highest
# change-detection tier). Off by default; turns on the scanner's `watch`
# feature (pulls in `notify`). With it off, library change-detection still
# works via the periodic incremental rescan + manual /Library/Refresh.
watch = ["pharos-scanner/watch"]
# Dual-backend DB: pull in the postgres store so `state::Stores` becomes the
# runtime-dispatching `AnyStore` (sqlite:// vs postgres:// by config URL). The
# shipped OCI image builds with this; default builds stay sqlite-only.
postgres = ["pharos-store-sqlx/postgres"]

[dev-dependencies]
actix-test = "0.1"
awc = "3"
pharos-jellyfin-test-client = { path = "../pharos-jellyfin-test-client" }
proptest = "1"
regex-lite = "0.1"
serde_json = "1"

[lints]
workspace = true
