[package]
name = "pharos-store-sqlx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres", "sqlx/tls-rustls"]

[dependencies]
pharos-core = { path = "../pharos-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
