[package]
name = "pharos-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
# Enable the `[[bin]] web` target — adds the wasm renderer + gloo-net
# HTTP client. Build with `dx serve` or
# `cargo build --target wasm32-unknown-unknown --bin pharos-ui-web --features web`.
web = [
    "dep:dioxus-web",
    "dep:gloo-net",
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
]

[[bin]]
name = "pharos-ui-web"
path = "src/bin/web.rs"
required-features = ["web"]

[dependencies]
dioxus.workspace = true
dioxus-web = { workspace = true, optional = true }
gloo-net = { workspace = true, optional = true }
# Pulled in by the `web` feature so PlayerView's wasm path can read
# `<video>.currentTime` from the underlying `web_sys::HtmlMediaElement`.
# Host-side tests compile without them via cfg-gating in the source.
web-sys = { version = "0.3", optional = true, features = [
    "HtmlMediaElement",
    "Event",
    "EventTarget",
    "Element",
    "Window",
    "Document",
    "Storage",
    "Location",
    "Performance",
    "Crypto",
] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
# T51 phase 1: dioxus-ssr renders components to HTML strings inside
# `#[test]`s so we can assert structural landmarks (input #ids,
# button text, expected error branches) without a browser. Lives at
# the same major version as the main `dioxus` workspace dep.
dioxus-ssr = "0.6"

[lints]
workspace = true
